# sinbo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  SECURITY.md  install.ps1  install.sh  install_lsp.ps1  install_lsp.sh  readme.md
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
assets/: logo.af
sinbo-lsp/: Cargo.toml  README.md
sinbo-lsp-vscode/: README.md  package.json  sinbo-lsp-0.1.0.vsix
sinbo-lsp/src/: main.rs
sinbo/src/: main.rs  var.rs
sinbo/src/completions/: sinbo.fish  sinbo.ps1
src/: encryption.rs  main.rs  storage.rs  transfer.rs  var.rs
src/commands/: mod.rs
src/completions/: sinbo.bash  sinbo.fish  sinbo.ps1  sinbo.zsh
