[package]
name = "sinbo"
version = "1.1.0"
edition = "2024"
description = "A CLI snippet manager. Store code once, retrieve it anywhere."
license = "MIT"
repository = "https://github.com/opmr0/sinbo"
readme = "README.md"
keywords = ["cli", "snippet", "manager", "productivity", "developer"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
atty = "0.2.14"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
