[package]
name = "sinbo"
version = "1.2.1"
edition = "2024"
description = "A CLI snippet manager. Store code once, retrieve it anywhere."
license = "MIT"
repository = "https://github.com/opmr0/sinbo"
readme = "README.md"
keywords = ["cli", "snippet", "manager", "productivity", "developer"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "7"
zeroize = "1.8.2"
clearscreen = "4.0.6"
dialoguer = "0.12.0"