[package]
name = "sinbo-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP server for sinbo snippet completions"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
dirs = "5"
rayon = "1"